# SupernovaEngine

./: .gitignore  CMakeLists.txt  InstallAnnotations.bat  InstallAnnotations.sh  LICENSE  README.md
examples/RmlUiDemo/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/Animation/: CMakeLists.txt
modules/Animation/modules/: CMakeLists.txt
modules/Animation/src/: AnimationLoader.cpp  AnimationManager.cpp  AnimationResource.cpp  Conversion.cpp  OzzFile.cpp  OzzFile.hpp  PlaybackController.cpp  SkeletonLoader.cpp  SkeletonManager.cpp  SkeletonResource.cpp  TryLoad.hpp
modules/App/: CMakeLists.txt
modules/App/BaseApp/: CMakeLists.txt
modules/App/ImGuiApp/: CMakeLists.txt
modules/App/NuklearApp/: CMakeLists.txt
modules/App/RmlUiApp/: CMakeLists.txt
modules/Audio/: CMakeLists.txt
modules/Audio/AudioDevice/: CMakeLists.txt
modules/Audio/AudioWorld/: CMakeLists.txt
modules/Camera/: CMakeLists.txt
modules/Camera/include/: ClippingPlanes.hpp  PerspectiveCamera.hpp
modules/Camera/src/: ClippingPlanes.cpp  PerspectiveCamera.cpp
modules/Common/: CMakeLists.txt
modules/Common/include/: AlwaysFalse.hpp  MapOptional.hpp  MergeVector.hpp  ScopedEnumFlags.hpp  TypeTraits.hpp  VariantCast.hpp  VariantFromIndex.hpp  VariantIndex.hpp  VisitorHelper.hpp
modules/Components/: CMakeLists.txt
modules/Components/CameraComponent/: CMakeLists.txt  CameraComponent.hpp
modules/Components/NameComponent/: CMakeLists.txt  NameComponent.hpp
modules/Components/Relationship/: CMakeLists.txt  ChildrenComponent.hpp  ParentComponent.hpp
modules/Components/ScriptComponent/: CMakeLists.txt  ScriptComponent.hpp
modules/Components/UIComponent/: CMakeLists.txt  UIComponent.hpp
modules/DebugDraw/: CMakeLists.txt
modules/DebugDraw/include/: DebugDraw.hpp
modules/DebugDraw/src/: DebugDraw.cpp
modules/ImGuiPlatformInterface/: CMakeLists.txt
modules/ImGuiPlatformInterface/include/: ImGuiPlatformInterface.hpp
modules/ImGuiPlatformInterface/src/: ImGuiPlatformInterface.cpp
modules/ImGuiStyleJSON/: CMakeLists.txt
modules/ImGuiStyleJSON/include/: ImGuiStyleJSON.hpp  ImVecJSON.hpp
modules/ImGuiStyleJSON/src/: ImGuiStyleJSON.cpp  ImVecJSON.cpp
modules/ImageLoader/: CMakeLists.txt
modules/ImageLoader/Ktx/: CMakeLists.txt
modules/ImageLoader/stb/: CMakeLists.txt
modules/Math/: CMakeLists.txt
modules/Math/src/: AABB.cpp  CollisionDetection.cpp  Frustum.cpp  Plane.cpp
modules/MetaComponent/: CMakeLists.txt
modules/MetaComponent/include/: MetaComponent.hpp
modules/MetaHelper/: CMakeLists.txt
modules/MetaHelper/include/: MetaHelper.hpp
modules/OS/: CMakeLists.txt
modules/OS/FileSystem/: CMakeLists.txt
modules/OS/InputEvents/: CMakeLists.txt
modules/OS/InputSystem/: CMakeLists.txt
modules/OS/Platform/: CMakeLists.txt
modules/OS/Window/: CMakeLists.txt
modules/Physics/: CMakeLists.txt
modules/Physics/Jolt/: CMakeLists.txt
modules/RHI/Vulkan/: CMakeLists.txt
modules/Renderer/: CMakeLists.txt
modules/Renderer/ShaderCodeBuilder/: CMakeLists.txt
modules/Renderer/UI/: CMakeLists.txt
modules/Renderer/WorldRenderer/: CMakeLists.txt
modules/Resource/: CMakeLists.txt
modules/Resource/include/: LoaderHelper.hpp  Resource.hpp
modules/Resource/src/: Resource.cpp
modules/RmlUiPlatformInterface/: CMakeLists.txt
modules/RmlUiPlatformInterface/include/: RmlUiPlatformInterface.hpp
modules/RmlUiPlatformInterface/src/: RmlUiPlatformInterface.cpp
modules/Scene/: CMakeLists.txt
modules/Scene/include/: Scene.hpp
modules/Scene/src/: Scene.cpp  SystemSerializationUtility.hpp
modules/Scripting/: .gitignore  CMakeLists.txt
modules/Scripting/annotations/: Camera.lua  CameraComponent.lua  ComponentBase.lua  DebugDraw.lua  Emitter.lua  Entity.lua  EventBase.lua  Logger.lua  NameComponent.lua  Resource.lua  Scene.lua  Tracy.lua  Transform.lua  UIComponent.lua  Utility.lua  hashString.lua  typeOf.lua
modules/Scripting/cmake/: DefineScriptModule.cmake
modules/Scripting/include/: LuaModules.hpp  ScriptCache.hpp  ScriptContext.hpp  ScriptLoader.hpp  ScriptManager.hpp  ScriptNode.hpp  ScriptResource.hpp  ScriptResourceHandle.hpp
modules/Scripting/lua/: cron.lua  inspect.lua  middleclass.lua  stateful.lua  tween.lua
modules/Scripting/modules/: CMakeLists.txt
modules/Scripting/src/: ScriptContext.cpp  ScriptLoader.cpp  ScriptManager.cpp  ScriptNode.cpp
modules/Serialization/: CMakeLists.txt
modules/Serialization/include/: SerializationUserDataAdapter.hpp
modules/StringUtility/: CMakeLists.txt
modules/StringUtility/include/: StringHash.hpp  StringUtility.hpp
modules/StringUtility/src/: StringUtility.cpp
modules/Systems/: CMakeLists.txt
modules/Systems/AnimationSystem/: CMakeLists.txt
modules/Systems/AudioSystem/: CMakeLists.txt
modules/Systems/Common/: CMakeLists.txt
modules/Systems/HierarchySystem/: CMakeLists.txt
modules/Systems/PhysicsSystem/: CMakeLists.txt
modules/Systems/RenderSystem/: CMakeLists.txt
modules/Systems/ScriptSystem/: CMakeLists.txt
modules/Systems/UISystem/: CMakeLists.txt
modules/Transform/: CMakeLists.txt
modules/Transform/include/: Transform.hpp
modules/Transform/src/: Transform.cpp
tools/Editor/: CMakeLists.txt
tools/Editor/annotations/: Editor.lua  MaterialEditor.lua
tools/Editor/assets/: DarkTheme.json  EntityScriptTemplate.lua
tools/Editor/include/: App.hpp  AudioClipCache.hpp  CameraController.hpp  FileBrowser.hpp  FileDialog.hpp  GPUWidget.hpp  ImGuiDragAndDrop.hpp  ImGuiHelper.hpp  ImGuiModal.hpp  ImGuiPayloadHelper.hpp  ImGuiPayloadType.hpp  ImGuiPopups.hpp  Inspector.hpp  LoggerWidget.hpp  MaterialCache.hpp  MeshCache.hpp  ProjectSettings.hpp  ProjectSettingsWidget.hpp  RenderSettings.hpp  RenderTargetPreview.hpp  ScriptEditor.hpp  Services.hpp  ShapeCreatorWidget.hpp  SkeletonCache.hpp  TextEditorCommon.hpp  TextureCache.hpp  TexturePreview.hpp  WidgetCache.hpp  WidgetWindow.hpp  WorldRendererWidget.hpp
tools/Editor/modules/: CMakeLists.txt
tools/Editor/src/: AnimationCache.cpp  App.cpp  AudioClipCache.cpp  FileBrowser.cpp  (+26 more)
tools/MeshConverter/: CMakeLists.txt
(+1534 files in other folders)
