add_subdirectory(Common)
add_subdirectory(StringUtility)
add_subdirectory(Serialization)

add_subdirectory(Math)

add_subdirectory(OS)

add_subdirectory(ImGuiPlatformInterface)
add_subdirectory(ImGuiStyleJSON)

add_subdirectory(RmlUiPlatformInterface)

add_subdirectory(Resource)
add_subdirectory(MetaHelper)
add_subdirectory(MetaComponent)

add_subdirectory(Transform)
add_subdirectory(Camera)
add_subdirectory(DebugDraw)

add_subdirectory(RHI)
add_subdirectory(ImageLoader)
add_subdirectory(Renderer)

add_subdirectory(Animation)
add_subdirectory(Physics)

add_subdirectory(Components)

add_subdirectory(Systems)

add_subdirectory(Scripting)

add_subdirectory(Scene)

add_subdirectory(Scripting/modules)

add_subdirectory(App)
